2001-11-14  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: add defaulttable.h so that it gets added to a
	dist

	* release 1.1.0

	* procman.c (procman_get_tree_state): change g_return_if to
	g_return_val since it returns a gboolean now. Also don't
	hardcode showing "all processes"

	* callbacks.c, memmaps.c: turn of updating for now until
	I get it right

2001-11-14  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: make nice defaults for the columns

	* procman.c (procman_get_tree_state): return FALSE if no config
	so I can do defaults

2001-11-14  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: #ifdef out libwnck support for now so I can
	do a release

	* memmaps.c, callbacks.c: free the hash tables

2001-11-13  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: make sure "(thread)" gets appended to 
	the name

2001-11-13  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: call gconf_value_free to plug mem leaks

	* proctable.c: free GtkTreePaths

	* prettytable.c: don't unref the pixbuf since we don't
	want to do that until exit. Fixes crash on clearing tree

2001-11-12  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: make updating work here in the same fashion
	as the disk list

2001-11-12  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: update the disks properly instead of just clearing
	the table on every update. Bug when removing an item though.
	I think it is a treeview bug

	* interface.c: set the update timer for the disk list

2001-11-12  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: fix bug correctly with respect to child
	processes and whether or not a process is a thread

2001-11-11  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: get " view active processes" working. Also
	fix a bug where child processes would not be shown if
	parents weren't

	* Makefile.am: remove a haack needed earlier to compile

	* procman.c: remove some unneeded stuff

2001-11-11  Kevin Vandersloot <kfv101@psu.edu>
