@@ -1,3 +1,12 @@
+2001-11-15  Kevin Vandersloot <kfv101@psu.edu>
+
+	* callbacks.c: get disk updating correct. Save the iters
+	that need to be removed
+
+	* memmaps.c: ditto
+
+	* interface.c: make the disk table update
+
 2001-11-14  Kevin Vandersloot <kfv101@psu.edu>
 
 	* Makefile.am: add defaulttable.h so that it gets added to a
